--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,510 @@
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+/* General styling    #3693ff*/
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	list-style: none;
 }
 
-#greeting-container {
-  margin-top: 20px;
+html {
+	scroll-behavior: smooth;
 }
+
+body {
+	font-family: Arial, sans-seriff;
+	line-height: 1.4;
+	color: #333;
+	overflow-x: hidden;
+}
+
+/* Utility Classes */
+.container {
+	max-width: 1100px;
+	margin: auto;
+}
+
+.text-primary {
+	color: #66fcf1;
+}
+
+.bg-light {
+	background: #f4f4f4;
+	color: #333;
+}
+.bg-dark {
+	background: #0b0c10;
+	color: #fff;
+}
+.time-primary {
+	color: #45a29e
+}
+/* Navbar */
+#navigation-bar {
+	display: flex;
+	justify-content: space-between;
+	background: #0b0c10;
+	color: #fff;
+	padding: 1.5rem 1rem;
+	position: sticky;
+	top: 0;
+	z-index: 1;
+	border-bottom: 3px solid #66fcf1;
+}
+
+#navigation-bar ul {
+	display: flex;
+	align-items: center;
+	list-style: none;
+
+}
+
+#navigation-bar h2 a {
+	color: #fff;
+	text-decoration: none;
+}
+
+#navigation-bar li a {
+	text-decoration: none;
+	color: #fff;
+	padding: 1rem;
+	font-size: 1.3rem;
+	margin: 0 0.5rem;
+	border-radius: 5px;
+	transition: background-color: 0.3s;
+}
+
+#navigation-bar li a:hover {
+	background-color: #66fcf1;
+}
+
+/* welcome-page Area */
+#welcome-page {
+	background: url(images/IMG-0990.JPG) no-repeat center center/cover;
+	height: 91.7vh;
+}
+
+.welcome-page-content {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	top: 81px;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background: rgba(0,0,0,0.6);
+	color: #fff;
+}
+
+.welcome-page-content h1 {
+	font-size: 4rem;
+	margin-bottom: 2rem;
+}
+
+.welcome-page-content .btn {
+	font-size: 1.5rem;
+	padding: 1rem 10rem;
+	transition: color 0.3s, background 0.3s;
+}
+
+.welcome-page-content .btn:hover {
+	background: #66fcf1;
+	color: #fff;
+}
+
+.btn {
+	color: #66fcf1;
+	text-decoration: none;
+	display: inline-block;
+	padding: 1rem 2rem;
+	border: 1px solid #66fcf1;
+	border-radius: 10px;
+	font-weight: bold;
+}
+
+
+.socials {
+	position: absolute;
+	top: 80%;
+	left: 50%;
+	transform: translate(-53%, -50%);
+	display: flex;
+
+}
+
+
+.socials li a {
+	list-style: none;
+	margin: 10px 30px;
+	display: inline-block;
+	font-size: 20px;
+	padding: 20px 20px;
+	color: #fff;
+	border: 1px solid #66fcf1;
+	border-radius: 50%;
+	transition: .3s;
+	flex: 1;
+}
+
+.socials li a:hover {
+	background: #66fcf1;
+	color: #fff;
+	border: 1px solid #66fcf1;
+	transition: 0.3s;
+}
+
+
+/*  Section: About */
+#about {
+	height: 100vh;
+	padding: 5rem 0;
+}
+
+#about h2, #experience h2 {
+	text-align: center;
+	font-size: 3rem;
+	margin-bottom: 3rem;
+}
+
+#about h3 {
+	font-size: 2rem;
+	margin-bottom: 1rem;
+}
+
+#about p.lead {
+	margin-bottom: 1rem;
+}
+
+#about .about-content {
+	display: flex;
+}
+
+#about .about-text, 
+#about .about-image {
+	flex: 1;
+}
+
+#about .about-text {
+	text-align: justify;
+}
+
+#about .about-image img {
+	display: block;
+	margin-left: auto;
+	width: 75%;
+	border-radius: 40%;
+	margin-top: 60px;
+}
+
+#about .about-article h4 {
+	font-size: 1rem;
+}
+
+
+
+
+
+/* Section: Experience */
+
+#experience {
+	background: url(images/IMG-2689.jpg) no-repeat center center/cover;
+	padding: 5rem 0;
+	height: 100vh;
+}
+
+.experience-container {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+
+ 	background: #1f2833;
+ 	padding: 25px;
+
+ 	max-width: 1100px;
+	margin: auto;
+}
+
+.experience-container .head h3{
+	font-size: 2rem;
+	margin-bottom: 1rem;
+}
+
+.experience-container ul {
+  	padding-left: 40px;
+  	overflow: hidden;
+}
+
+.experience-container ul li {
+  	position: relative;
+}
+
+.experience-container ul li p {
+  	color: #45a29e;
+}
+
+.experience-container ul li .period {
+	color: #fff;
+  	font-size: 16px;
+  	font-weight: 500;
+  	margin-bottom: 15px;
+}
+.experience-container ul li .company {
+  	color: #66fcf1;;
+}
+
+.experience-container ul li .company-role {
+  	margin-bottom: 20px;
+}
+
+.experience-container ul li:last-child .company-role {
+  	margin-bottom: 0;
+}
+
+.experience-container ul li:before {
+  	content: "";
+  	position: absolute;
+  	top: 5px;
+  	left: -25px;
+  	width: 10px;
+  	height: 10px;
+  	border-radius: 50%;
+  	border: 2px solid #66fcf1;
+}
+
+.experience-container ul li:after {
+  	content: "";
+  	position: absolute;
+  	top: 10px;
+  	left: -20px;
+  	width: 2px;
+  	height: 115px;
+  	background: #66fcf1;
+}
+
+
+
+
+
+/* Section: gallery */
+
+
+
+#gallery {
+	height: 100vh;
+}
+
+.cont{
+    display:grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-auto-rows:100px 300px;
+    grid-gap:10px;
+    grid-auto-flow: dense;
+}
+
+.gallery-item{
+    width:100%;
+    height:100%;
+    position:relative;
+}
+
+.gallery-item .image{
+    width:100%;
+    height:100%;
+    overflow:hidden;
+}
+
+.gallery-item .image img{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    object-position:50% 50%;
+    cursor:pointer;
+    transition:.3s ease-in-out;
+}
+.gallery-item:hover .image img{
+    transform:scale(1.5);
+}
+
+.gallery-item .text{
+	opacity: 0;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    color:#fff;
+    font-size:25px;
+    pointer-events:none;
+    z-index:4;
+    transition: .3s ease-in-out;
+}
+
+.gallery-item:hover .text{
+    opacity:1;
+    animation: move-down .3s linear;
+    padding:1em;
+    width:100%;
+}
+
+.w-1{
+    grid-column: span 1;
+}
+.w-2{
+    grid-column: span 2;
+}
+.w-3{
+    grid-column: span 3;
+}
+.w-4{
+    grid-column: span 4;
+}
+.w-5{
+    grid-column: span 5;
+}
+.w-6{
+    grid-column: span 6;
+}
+.w-7{
+    grid-column: span 6;
+}
+.w-8{
+    grid-column: span 6;
+}
+
+.h-1{
+    grid-row: span 1;
+}
+.h-2{
+    grid-row: span 2;
+}
+.h-3{
+    grid-row: span 3;
+}
+.h-4{
+    grid-row: span 4;
+}
+.h-5{
+    grid-row: span 5;
+}
+.h-6{
+    grid-row: span 6;
+}
+.h-7{
+    grid-row: span 6;
+}
+
+.h-8{
+    grid-row: span 6;
+}
+
+
+
+
+
+
+/* Section; Contact */
+
+#contact {
+	padding: 5rem 0;
+}
+
+#contact h2 {
+	text-align: center;
+	font-size: 3rem;
+	margin-bottom: 8rem;
+}
+
+#contact h3 {
+	text-align: center;
+	font-size: 2.5rem;
+	margin: 3rem 0;
+	margin-top: 5rem;
+}
+
+#contact .form-box {
+	background: #fff;
+	padding: 3rem;
+	box-shadow: 2px 2px 5px #d1d1d1;
+	border-radius: 10px;
+}
+
+#contact .form-group {
+	margin-bottom: 2rem;
+
+}
+
+#contact .form-group label {
+	display: block;
+	margin-bottom: 0.5rem;
+	width: 80%
+	margin-left: 10%;
+	font-size: 1.1rem;
+}
+
+#contact .form-group input,
+#contact .form-group textarea {
+	width: 80%;
+	margin-left: 10%;
+	font-size: 1.3rem;
+	padding: 1rem;
+	border: 0.5px solid #333;
+	border-radius: 5px
+}
+
+#contact .form-group textarea {
+	font-family: Arial, sans-seriff;
+}
+
+#contact .contact-btn {
+	width: 80%;
+	margin-left: 10%;
+	display: inline-block;
+	padding: 1rem 3rem;
+	border: none;
+	border-radius: 5px;
+	font-size: 1.5rem;
+	background: #66fcf1;
+	color: #fff;
+	margin-bottom: 2rem;
+	cursor: pointer;
+	transition: background 0.3 
+}
+
+#contact .contact-btn:hover {
+	background: #0b0c10;
+}
+
+#contact .form-container {
+	position: relative;
+
+}
+
+#contact .mail-icon {
+	font-size: 4rem;
+	background: #66fcf1;
+	color: #fff;
+	display: inline-block;
+	padding: 1.5rem 2rem;
+	border-radius: 50%;
+	position: absolute;
+	top: -7%; 
+	left: 45%;
+}
+
+/* Footer */
+footer {
+	padding: 2.5rem;
+}
+footer p {
+	text-align: center;
+}
+
+
+
+
+
+
