--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -187,6 +187,7 @@ body {
 
 #about .about-text {
 	text-align: justify;
+	margin-left: 10px;
 }
 
 #about .about-image img {
@@ -201,10 +202,30 @@ body {
 	font-size: 1rem;
 }
 
+#about .cv-btn {
+	background: #0b0c10;
+	flex: 1;
+	display: inline-block;
+	color: #66fcf1;
+	border: none;
+	cursor: pointer;
+	font-size: 1.5rem;
+	padding: 1rem 1rem;
+	border-radius: 10px;
+	font-weight: bold;
+	margin-top: 100px;
+	transition: color 0.3s, background 0.3s;
+}
+
+#about .cv-btn:hover {
+	background: #66fcf1;
+	color: #fff;
+}
+
 /* Section: Experience */
 
 #experience {
-	background: url(images/IMG-2689.jpg) no-repeat center center/cover;
+	background: url(images/blue-background.jpg) no-repeat center center/cover;
 	padding: 5rem 0;
 	height: 100vh;
 }
@@ -453,7 +474,7 @@ body {
 	color: #fff;
 	margin-bottom: 2rem;
 	cursor: pointer;
-	transition: background 0.3 
+	transition: background 0.3;
 }
 
 #contact .contact-btn:hover {
@@ -462,7 +483,6 @@ body {
 
 #contact .form-container {
 	position: relative;
-
 }
 
 #contact .mail-icon {
