step3 of this week's material

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -417,7 +417,10 @@ body {
 .h-8{
     grid-row: span 6;
 }
-
+/* Section: Comments */
+#comments {
+    height: 100vh;
+}
 
 /* Section; Contact */
 
